Finished pizza subpage

--- a/index.html
+++ b/index.html
@@ -11,19 +11,14 @@
     <h1>Odin Recipes</h1>
     <div id="container">
         <div class="pizza">
-            <a href="/recipes/pizza.html">Pizza
-                <img src="images/pizza.jpg" alt="pizza">
-            </a>
+            <a href="recipes/pizza.html"><img src="images/pizza.jpg" alt=""></a>
+            <p>This is a pizza. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, esse nihil, vero fugiat minima adipisci assumenda laborum, nostrum eveniet officiis iste ea? Sit consequuntur a optio eius? Cumque, dolor. Voluptate!</p>
         </div> 
         <div class="lasagna">
-            <a href="recipes/lasagna.html">Lasagna
-                <img src="images/lasagna.jpg" alt="lasagna">
-            </a>            
+            <a href="recipes/lasagna.html"><img src="images/lasagna.jpg" alt=""></a>     
         </div>
         <div class="meatloaf">
-            <a href="recipes/meatloaf.html">Meatloaf
-                <img src="images/meatloaf.jpg" alt="meatloaf">
-            </a>            
+            <a href="recipes/meatloaf.html"><img src="images/meatloaf.jpg" alt=""></a>            
         </div> 
     </div> 
 </body>
