Finished lasagna subpage

--- a/index.html
+++ b/index.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles/index.css">
-</head>
-<body>
-    <h1>Odin Recipes</h1>
-    <div id="container">
-        <div class="pizza">
-            <a href="recipes/pizza.html"><img src="images/pizza.jpg" alt=""></a>
-            <p>This is a pizza. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, esse nihil, vero fugiat minima adipisci assumenda laborum, nostrum eveniet officiis iste ea? Sit consequuntur a optio eius? Cumque, dolor. Voluptate!</p>
-        </div> 
-        <div class="lasagna">
-            <a href="recipes/lasagna.html"><img src="images/lasagna.jpg" alt=""></a>     
-        </div>
-        <div class="meatloaf">
-            <a href="recipes/meatloaf.html"><img src="images/meatloaf.jpg" alt=""></a>            
-        </div> 
-    </div> 
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Odin recipes</title>
+		<link rel="stylesheet" href="styles/index.css" />
+	</head>
+	<body>
+		<h1>Odin Recipes</h1>
+		<div id="container">
+			<div class="pizza">
+				<a href="recipes/pizza.html"><img src="images/pizza.jpg" alt="" /></a>
+				<p>
+					This is a pizza. Lorem ipsum dolor sit amet consectetur adipisicing
+					elit. Aliquam, esse nihil, vero fugiat minima adipisci assumenda
+					laborum, nostrum eveniet officiis iste ea? Sit consequuntur a optio
+					eius? Cumque, dolor. Voluptate!
+				</p>
+			</div>
+			<div class="lasagna">
+				<a href="recipes/lasagna.html"
+					><img src="images/lasagna.jpg" alt=""
+				/></a>
+				<p>
+					This is a lasagna. Lorem ipsum dolor sit amet consectetur adipisicing
+					elit. Quas at suscipit accusamus molestiae mollitia ab porro nulla et,
+					aperiam esse est autem harum labore? Asperiores repudiandae id nemo
+					numquam suscipit.
+				</p>
+			</div>
+			<div class="meatloaf">
+				<a href="recipes/meatloaf.html"
+					><img src="images/meatloaf.jpg" alt=""
+				/></a>
+				<p>
+					This is a meatloaf. Lorem ipsum dolor sit amet consectetur adipisicing
+					elit. Fugit voluptatem asperiores nisi magnam quod qui nemo quibusdam
+					voluptatibus velit maiores, quo, autem maxime assumenda tempore ipsam
+					vitae saepe officia quisquam.
+				</p>
+			</div>
+		</div>
+	</body>
 </html>
