--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,5 +9,41 @@
 	</head>
 	<body>
 		<h1>Lasagna</h1>
+		<div id="lasagna-container">
+			<img src="../images/lasagna.jpg" alt="" />
+			<ul>
+				<li>1 pound fresh mushrooms, sliced</li>
+				<li>¾ cup chopped green bell pepper</li>
+				<li>¾ cup chopped onion</li>
+				<li>3 cloves garlic, minced</li>
+				<li>2 tablespoons vegetable oil</li>
+				<li>2 (26 ounce) jars pasta sauce</li>
+				<li>1 teaspoon dried basil</li>
+				<li>1 (15 ounce) container part-skim ricotta cheese</li>
+				<li>4 cups shredded mozzarella cheese</li>
+				<li>2 eggs</li>
+			</ul>
+			<ol>
+				<li>
+					Cook the lasagna noodles in a large pot of boiling water for 10
+					minutes, or until al dente. Rinse with cold water, and drain.
+				</li>
+				<li>
+					In a large saucepan, cook and stir mushrooms, green peppers, onion,
+					and garlic in oil. Stir in pasta sauce and basil; bring to a boil.
+					Reduce heat, and simmer 15 minutes.
+				</li>
+				<li>Mix together ricotta, 2 cups mozzarella cheese, and eggs.</li>
+				<li>
+					Preheat oven to 350 degrees F (175 degrees C). Spread 1 cup tomato
+					sauce into the bottom of a greased 9x13 inch baking dish. Layer 1/2
+					each, lasagna noodles, ricotta mix, sauce, and Parmesan cheese. Repeat
+					layering, and top with remaining 2 cups mozzarella cheese.
+				</li>
+				<li>
+					Bake, uncovered, for 40 minutes. Let stand 15 minutes before serving.
+				</li>
+			</ol>
+		</div>
 	</body>
 </html>
