--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -9,5 +9,32 @@
 	</head>
 	<body>
 		<h1>Meatloaf</h1>
+		<div id="meatloaf-container">
+			<img src="../images/meatloaf.jpg" alt="" />
+			<ul>
+				<li>2 pounds lean ground beef</li>
+				<li>½ pound fresh mushrooms, all minced except for 6</li>
+				<li>¾ cup fresh bread crumbs</li>
+				<li>½ cup minced onion</li>
+				<li>½ cup ketchup</li>
+				<li>2 eggs, beaten</li>
+				<li>1 ½ teaspoons salt</li>
+				<li>½ teaspoon ground black pepper</li>
+			</ul>
+			<ol>
+				<li>Preheat oven to 350 degrees F (175 degrees C).</li>
+				<li>
+					In a large mixing bowl, combine ground meat, minced mushrooms, bread
+					crumbs, onion, ketchup, eggs, and salt and pepper. Mix well. Spread
+					1/2 of the mixture into the bottom of a loaf pan. Arrange 6 whole
+					mushrooms stem down into meat. Top with rest of meat, patting to
+					combine both halves.
+				</li>
+				<li>
+					Bake for 1 hour and 45 minutes, or until done. Internal temperature
+					should measure 160 degrees F (70 degrees C) when done.
+				</li>
+			</ol>
+		</div>
 	</body>
 </html>
